--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,8 @@
     <!-- Strings related to Muzei Source -->
     <string name="muzei_description">Today\'s weather</string>
 
+    <string name="wearable_description">Wearable Today\'s weather</string>
+
     <!-- Empty Weather Database -->
     <string name="empty_forecast_list">No Weather Information Available</string>
     <string name="empty_forecast_list_no_network">No weather information available. The network is not available to fetch weather data.</string>
